--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
     "sequelize": "~2.1.3",
-    "sqlite3": "~3.0.8"
+    "sqlite3": "~3.0.8",
+    "pg-hstore": "~2.3.2"
   }
 }
