--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines":{
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
+  "devDependencies":{
+    "sqlite3": "^3.0.4"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
@@ -15,7 +22,7 @@
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
     "sequelize": "~2.1.3",
-    "sqlite3": "~3.0.8",
-    "pg-hstore": "~2.3.2"
+    "pg-hstore": "~2.3.2",
+    "pg": "~4.3.0"
   }
 }
