--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "engines":{
+  "engines": {
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  "devDependencies":{
+  "devDependencies": {
     "sqlite3": "^3.0.4"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "sequelize": "~2.1.3",
     "pg-hstore": "~2.3.2",
     "pg": "~4.3.0",
-    "materialize-css": "~0.96.1"
+    "materialize-css": "~0.96.1",
+    "method-override": "~2.3.3"
   }
 }
