--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg-hstore": "~2.3.2",
     "pg": "~4.3.0",
     "materialize-css": "~0.96.1",
-    "method-override": "~2.3.3"
+    "method-override": "~2.3.3",
+    "express-session": "~1.11.2"
   }
 }
