--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "pg": "~4.3.0",
     "materialize-css": "~0.96.1",
     "method-override": "~2.3.3",
-    "express-session": "~1.11.2"
+    "express-session": "~1.11.2",
+    "https": "~1.0.0",
+    "fs": "0.0.2"
   }
 }
