--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "method-override": "~2.3.3",
     "express-session": "~1.11.2",
     "https": "~1.0.0",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "multer": "~0.1.8"
   }
 }
